// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label for="textfield-affix">
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="textfield-affix"
      inputmode="numeric"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</ds-field>
`;

exports[`Controlled 1`] = `
<style>
  .textfield-controlled-main {
          display: flex;
          gap: var(--ds-size-2);
          align-items: end;
          width: 100%;
        }
        .textfield-controlled-textfield {
          flex-grow: 1;
        }
</style>
<div>
  <ds-field>
    <label for="textfield-controlled">
      Fullt navn
    </label>
    <div>
      <input
        id="textfield-controlled"
        autocomplete="name"
        type="text"
        value
      >
    </div>
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Counter 1`] = `
<ds-field>
  <label for="textfield-counter">
    Legg til en beskrivelse
  </label>
  <div>
    <textarea
      id="textfield-counter"
      rows="4"
      aria-describedby="<generated>"
      style="<removed>"
    >
    </textarea>
  </div>
  <p
    data-field="counter"
    data-limit="75"
    id="<generated>"
    data-label="75 tegn igjen"
    data-state="under"
  >
  </p>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label for="textfield-disabled">
    Disabled Textfield
  </label>
  <div>
    <input
      id="textfield-disabled"
      disabled
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label for="multiline-textfield-disabled">
    Disabled multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-disabled"
      rows="4"
      disabled
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label for="textfield-preview">
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label for="format">
    Fødselsnummer
  </label>
  <div>
    <input
      autocomplete="off"
      id="format"
      inputmode="numeric"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label for="textfield-preview">
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label for="textfield-readonly">
    ReadOnly Textfield
  </label>
  <div>
    <input
      id="textfield-readonly"
      readonly
      type="text"
    >
  </div>
</ds-field>
<ds-field>
  <label for="multiline-textfield-readonly">
    ReadOnly multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-readonly"
      rows="4"
      readonly
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;

exports[`Rows 1`] = `
<ds-field>
  <label for="textfield-rows">
    Beskrivelse
  </label>
  <div>
    <textarea
      rows="4"
      id="textfield-rows"
      style="<removed>"
    >
    </textarea>
  </div>
</ds-field>
`;
